--- a/common/fonts.yaml
+++ b/common/fonts.yaml
@@ -1,47 +1,47 @@
 ---
 font:
-  # Inter (clean sans-serif). Put the TTF in assets/fonts/ (next step).
-  - file: "esphome-lvgl-panel/assets/fonts/Inter-SemiBold.ttf"
-    id: inter_72
+  # === Base font files (Inter) ===
+  - file: "assets/fonts/Inter-SemiBold.ttf"
+    id: font_display_72
     size: 72
     bpp: 8
 
-  - file: "esphome-lvgl-panel/assets/fonts/Inter-SemiBold.ttf"
-    id: inter_48
+  - file: "assets/fonts/Inter-SemiBold.ttf"
+    id: font_display_48
     size: 48
     bpp: 8
 
-  - file: "esphome-lvgl-panel/assets/fonts/Inter-SemiBold.ttf"
-    id: inter_42
+  - file: "assets/fonts/Inter-SemiBold.ttf"
+    id: font_display_42
     size: 42
     bpp: 8
 
-  - file: "esphome-lvgl-panel/assets/fonts/Inter-SemiBold.ttf"
-    id: inter_36
+  - file: "assets/fonts/Inter-SemiBold.ttf"
+    id: font_display_36
     size: 36
     bpp: 8
 
-  - file: "esphome-lvgl-panel/assets/fonts/Inter-SemiBold.ttf"
-    id: inter_24
+  - file: "assets/fonts/Inter-SemiBold.ttf"
+    id: font_body_24
     size: 24
     bpp: 8
 
-  - file: "esphome-lvgl-panel/assets/fonts/Inter-SemiBold.ttf"
-    id: inter_20
+  - file: "assets/fonts/Inter-SemiBold.ttf"
+    id: font_body_20
     size: 20
     bpp: 8
 
-  - file: "esphome-lvgl-panel/assets/fonts/Inter-SemiBold.ttf"
-    id: inter_18
+  - file: "assets/fonts/Inter-SemiBold.ttf"
+    id: font_body_18
     size: 18
     bpp: 8
 
-  - file: "esphome-lvgl-panel/assets/fonts/Inter-SemiBold.ttf"
-    id: inter_14
+  - file: "assets/fonts/Inter-SemiBold.ttf"
+    id: font_body_14
     size: 14
     bpp: 8
 
-  - file: "esphome-lvgl-panel/assets/fonts/Inter-SemiBold.ttf"
-    id: inter_12
+  - file: "assets/fonts/Inter-SemiBold.ttf"
+    id: font_body_12
     size: 12
     bpp: 8
