--- a/weather_homeassistant/weather_today.yaml
+++ b/weather_homeassistant/weather_today.yaml
@@ -48,65 +48,65 @@ image:
   rgb565:
     alpha_channel:
       - file: esphome-modular-lvgl-buttons/weather_homeassistant/assets/images/nt_clear.svg
-        id: clear_night_${size}
+        id: now_clear_night_${size}
         resize: ${size}x${size}
 
       - file: esphome-modular-lvgl-buttons/weather_homeassistant/assets/images/cloudy.svg
-        id: cloudy_${size}
+        id: now_cloudy_${size}
         resize: ${size}x${size}
 
       - file: esphome-modular-lvgl-buttons/weather_homeassistant/assets/images/tstorms.svg
-        id: exceptional_${size}
+        id: now_exceptional_${size}
         resize: ${size}x${size}
 
       - file: esphome-modular-lvgl-buttons/weather_homeassistant/assets/images/fog.svg
-        id: fog_${size}
+        id: now_fog_${size}
         resize: ${size}x${size}
 
       - file: esphome-modular-lvgl-buttons/weather_homeassistant/assets/images/sleet.svg
-        id: hail_${size}
+        id: now_hail_${size}
         resize: ${size}x${size}
 
       - file: esphome-modular-lvgl-buttons/weather_homeassistant/assets/images/chancetstorms.svg
-        id: lightning_${size}
+        id: now_lightning_${size}
         resize: ${size}x${size}
 
       - file: esphome-modular-lvgl-buttons/weather_homeassistant/assets/images/tstorms.svg
-        id: lightning_rainy_${size}
+        id: now_lightning_rainy_${size}
         resize: ${size}x${size}
 
       - file: esphome-modular-lvgl-buttons/weather_homeassistant/assets/images/partlycloudy.svg
-        id: partlycloudy_${size}
+        id: now_partlycloudy_${size}
         resize: ${size}x${size}
 
       - file: esphome-modular-lvgl-buttons/weather_homeassistant/assets/images/rain.svg
-        id: pouring_${size}
+        id: now_pouring_${size}
         resize: ${size}x${size}
 
       - file: esphome-modular-lvgl-buttons/weather_homeassistant/assets/images/chancerain.svg
-        id: rainy_${size}
+        id: now_rainy_${size}
         resize: ${size}x${size}
 
       - file: esphome-modular-lvgl-buttons/weather_homeassistant/assets/images/snow.svg
-        id: snowy_${size}
+        id: now_snowy_${size}
         resize: ${size}x${size}
 
       - file: esphome-modular-lvgl-buttons/weather_homeassistant/assets/images/chancesleet.svg
-        id: snowy_rainy_${size}
+        id: now_snowy_rainy_${size}
         resize: ${size}x${size}
 
       - file: esphome-modular-lvgl-buttons/weather_homeassistant/assets/images/sunny.svg
-        id: sunny_${size}
+        id: now_sunny_${size}
         resize: ${size}x${size}
 
       - file: esphome-modular-lvgl-buttons/weather_homeassistant/assets/images/windy.svg
-        id: windy_${size}
+        id: now_windy_${size}
         resize: ${size}x${size}
 
       - file: esphome-modular-lvgl-buttons/weather_homeassistant/assets/images/unknown.svg
-        id: unknown_${size}
+        id: now_unknown_${size}
         resize: ${size}x${size}
 
       - file: esphome-modular-lvgl-buttons/weather_homeassistant/assets/images/circle-slash.svg
-        id: unavailable_${size}
+        id: now_unavailable_${size}
         resize: ${size}x${size}
