--- a/guition-4848s040.yaml
+++ b/guition-4848s040.yaml
@@ -161,8 +161,8 @@ lvgl:
             grid_cell_column_pos: 0
             grid_cell_row_span: 1
             grid_cell_column_span: 2
-            # outline_width: 1   # debug code - This is for visualizing boundries remove for production
-            # outline_color: red # debug code - This is for visualizing boundries remove for production
+            outline_width: 1   # debug code - This is for visualizing boundries remove for production
+            outline_color: red # debug code - This is for visualizing boundries remove for production
             widgets:
               - label:
                   text: "12:00"
@@ -184,8 +184,8 @@ lvgl:
             grid_cell_column_pos: 0
             grid_cell_row_span: 1
             grid_cell_column_span: 2
-            # outline_width: 1   # debug code - This is for visualizing boundries remove for production
-            # outline_color: red # debug code - This is for visualizing boundries remove for production
+            outline_width: 1   # debug code - This is for visualizing boundries remove for production
+            outline_color: red # debug code - This is for visualizing boundries remove for production
             layout:
               type: flex
               flex_flow: COLUMN
@@ -213,8 +213,8 @@ lvgl:
             grid_cell_column_pos: 0
             grid_cell_row_span: 2
             grid_cell_column_span: 4
-            # outline_width: 1   # debug code - This is for visualizing boundries remove for production
-            # outline_color: red # debug code - This is for visualizing boundries remove for production
+            outline_width: 1   # debug code - This is for visualizing boundries remove for production
+            outline_color: red # debug code - This is for visualizing boundries remove for production
             layout: 1x4
             widgets:
               - obj:
