--- a/guition-4848s040.yaml
+++ b/guition-4848s040.yaml
@@ -198,9 +198,9 @@ lvgl:
             widgets:
               - obj:
                   <<: *now_forecast_obj_base
-                  pad_top: 2
-                  pad_bottom: 2
-                  pad_row: 2
+                  #pad_top: 2
+                  #pad_bottom: 2
+                  #pad_row: 2
                   widgets:
                     - label:
                         text: "Now"
