--- a/guition-4848s040.yaml
+++ b/guition-4848s040.yaml
@@ -101,7 +101,7 @@ packages:
       flex_flow: COLUMN
       flex_align_cross: center
       flex_align_track: center
-      pad_row: 2
+      flex_gap: 2
 
 
   - &forecast_obj_base
