--- a/guition-4848s040.yaml
+++ b/guition-4848s040.yaml
@@ -182,36 +182,30 @@ lvgl:
                   text_align: center
 
         - container:
-            grid_cell_x_align: stretch
-            grid_cell_y_align: stretch
-            grid_cell_row_pos: 3
-            grid_cell_column_pos: 0
-            grid_cell_row_span: 3
-            grid_cell_column_span: 2
-            outline_width: 1   # debug code - This is for visualizing boundries remove for production
-            outline_color: red # debug code - This is for visualizing boundries remove for production
+            pad_top: 2
+            pad_bottom: 2
+            width: 100%
+            height: SIZE_CONTENT
             layout:
               type: flex
               flex_flow: COLUMN
-              flex_align_main: center
               flex_align_cross: center
+              flex_align_track: center
             widgets:
-              - container:
-                  <<: *now_forecast_obj_base
+              - label:
+                  text: Now
+                  text_font: font_body_24
+                  height: SIZE_CONTENT
+              - image:
+                  id: weather_condition_icon
+                  src: unknown_80
                   pad_top: 2
-                  pad_bottom: 2
-                  pad_row: 2
-                  widgets:
-                    - label:
-                        text: "Now"
-                        <<: *forecast_label_base
-                    - image:
-                        id: weather_condition_icon
-                        src: unknown_80
-                    - label:
-                        id: weather_temperature_today
-                        <<: *forecast_label_base
-                        text: "---°"
+              - label:
+                  id: weather_temperature_today
+                  text: "---°"
+                  text_font: font_body_24
+                  height: SIZE_CONTENT
+                  pad_top: 2
 
         - container:
             grid_cell_x_align: stretch
