--- a/guition-4848s040.yaml
+++ b/guition-4848s040.yaml
@@ -188,40 +188,28 @@ lvgl:
             grid_cell_column_pos: 0
             grid_cell_row_span: 3
             grid_cell_column_span: 2
-            outline_width: 1   # debug code - This is for visualizing boundries remove for production
-            outline_color: red # debug code - This is for visualizing boundries remove for production
+            outline_width: 1   # debug
+            outline_color: red # debug
             layout:
               type: flex
               flex_flow: COLUMN
               flex_align_main: center
               flex_align_cross: center
             widgets:
-              - container:
-                  pad_top: 2
-                  pad_bottom: 2
-                  width: 100%
-                  height: SIZE_CONTENT
-                  layout:
-                    type: flex
-                    flex_flow: COLUMN
-                    flex_align_cross: center
-                    flex_align_track: center
+              - obj:
+                  <<: *forecast_obj_base
                   widgets:
                     - label:
-                        text: Now
-                        text_font: font_body_24
-                        height: SIZE_CONTENT
+                        text: "Now"
+                        <<: *forecast_label_base
                     - image:
                         id: weather_condition_icon
                         src: unknown_80
-                        pad_top: 2
                     - label:
                         id: weather_temperature_today
+                        <<: *forecast_label_base
                         text: "---°"
-                        text_font: font_body_24
-                        height: SIZE_CONTENT
-                        pad_top: 2
-
+                        
         - container:
             grid_cell_x_align: stretch
             grid_cell_y_align: stretch
