--- a/guition-4848s040.yaml
+++ b/guition-4848s040.yaml
@@ -96,13 +96,17 @@ packages:
   - &now_forecast_obj_base
     width: 100%
     height: SIZE_CONTENT
+    bg_color: gray50
+    radius: 3
+    pad_top: 2
+    pad_bottom: 2
     layout:
       type: flex
       flex_flow: COLUMN
       flex_align_cross: center
       flex_align_track: center
-      flex_gap: 2
-
+      pad_column: 0
+      pad_row: 2
 
   - &forecast_obj_base
     height: SIZE_CONTENT
@@ -197,7 +201,7 @@ lvgl:
               flex_align_cross: center
             widgets:
               - obj:
-                  <<: *forecast_obj_base
+                  <<: *now_forecast_obj_base
                   widgets:
                     - label:
                         text: "Now"
