--- a/guition-4848s040.yaml
+++ b/guition-4848s040.yaml
@@ -168,10 +168,6 @@ lvgl:
             #outline_width: 1   # debug
             #outline_color: red # debug
             layout:
-              type: flex
-              flex_flow: COLUMN
-              flex_align_main: center
-              flex_align_cross: center
               pad_row: 4   # controls spacing between time & date
             widgets:
               - obj:
@@ -181,6 +177,8 @@ lvgl:
                     type: flex
                     flex_flow: COLUMN
                     flex_align_cross: center
+                    flex_align_track: center
+                    pad_column: 0
                     pad_row: 2
                   widgets:
                     - label:
