--- a/guition-4848s040.yaml
+++ b/guition-4848s040.yaml
@@ -167,28 +167,22 @@ lvgl:
             grid_cell_column_span: 2
             #outline_width: 1   # debug
             #outline_color: red # debug
-            layout:
-              pad_row: 4   # controls spacing between time & date
             widgets:
-              - obj:
+              - label:
+                  id: current_time
+                  text: "12:00"
+                  align: top_mid
                   width: 100%
-                  height: SIZE_CONTENT
-                  layout:
-                    type: flex
-                    flex_flow: COLUMN
-                    flex_align_cross: center
-                    flex_align_track: center
-                    pad_column: 0
-                    pad_row: 2
-                  widgets:
-                    - label:
-                        id: current_time
-                        text: "12:00"
-                        text_font: font_display_72
-                    - label:
-                        id: month_day
-                        text: "September 19"
-                        text_font: font_body_20
+                  text_align: center
+                  text_font: font_display_72
+
+              - label:
+                  id: month_day
+                  text: "February 26"
+                  align: bottom_mid
+                  width: 100%
+                  text_align: center
+                  text_font: font_body_20
 
         - container:
             grid_cell_x_align: stretch
