--- a/guition-4848s040.yaml
+++ b/guition-4848s040.yaml
@@ -187,6 +187,32 @@ lvgl:
         - container:
             grid_cell_x_align: stretch
             grid_cell_y_align: stretch
+            grid_cell_row_pos: 0
+            grid_cell_column_pos: 2
+            grid_cell_row_span: 3
+            grid_cell_column_span: 2
+            layout:
+              type: flex
+              flex_flow: COLUMN
+              flex_align_main: center
+              flex_align_cross: center
+              pad_row: 2
+            widgets:
+              - label:
+                  text: "EV"
+                  text_font: font_body_20
+              - label:
+                  id: ev_battery_level
+                  text: "--%"
+                  text_font: font_display_48
+              - label:
+                  id: ev_range
+                  text: "-- mi"
+                  text_font: font_body_24
+
+        - container:
+            grid_cell_x_align: stretch
+            grid_cell_y_align: stretch
             grid_cell_row_pos: 3
             grid_cell_column_pos: 0
             grid_cell_row_span: 3
