--- a/guition-4848s040.yaml
+++ b/guition-4848s040.yaml
@@ -258,7 +258,19 @@ lvgl:
                         id: weather_temperature_today
                         <<: *forecast_label_base
                         text: "---°"
-                        
+        - container:
+            grid_cell_x_align: stretch
+            grid_cell_y_align: stretch
+            grid_cell_row_pos: 3
+            grid_cell_column_pos: 2
+            grid_cell_row_span: 3
+            grid_cell_column_span: 2
+            #outline_width: 1   # debug
+            #outline_color: red # debug
+            widgets:
+              - image:
+                  src: car_outline_dark_200
+
         - container:
             grid_cell_x_align: stretch
             grid_cell_y_align: stretch
