--- a/common/palette_light.yaml
+++ b/common/palette_light.yaml
@@ -1,7 +1,18 @@
-substitutions:
-  color_background: "#1F242D"
-  color_surface: "#2A303B"
-  color_primary_text: "#E6E6E6"
-  color_secondary_text: "#AEB6C2"
-  color_accent: "#FFB300"
-  color_outline: "#3A4252"
+color:
+  - id: color_background
+    hex: '1C2128'      # slightly deeper, less blue than 1F242D
+
+  - id: color_surface
+    hex: '262D36'      # lifted but not bright
+
+  - id: color_primary_text
+    hex: 'E4E8ED'      # softer than pure E6E6E6
+
+  - id: color_secondary_text
+    hex: 'A6AFBB'      # slightly muted
+
+  - id: color_accent
+    hex: 'FFB74D'      # warmer amber (less neon than FFB300)
+
+  - id: color_outline
+    hex: '39424F'      # subtle border tone
